--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         }
     ],
     "require": {
-        "php": "^7.1"
+        "php": "^7.1",
+        "phpunit/phpunit": "^8.4",
+        "mockery/mockery": "^1.2"
     },
     "autoload": {
         "psr-4": {
